Fix gamma radiation animation to use clip-path to not take extra space in scene.

--- a/nuclear_animation.css
+++ b/nuclear_animation.css
@@ -133,7 +133,7 @@
 
     display: flex;
 
-    animation: move-wave 1.5s linear reverse infinite;
+    animation: move-wave 1s linear infinite;
 }
 
 .wave-part {
@@ -168,24 +168,21 @@
     transform: translateY(-50%);
 }
 
-.overflow-container {
-    overflow: hidden;
-
-    position: absolute;
-
-    width: 100%;
-    height: 100%;
-
-    animation: move-wave 1.5s linear infinite;
-}
-
 @keyframes move-wave {
     0% {
-        transform: translateX(-150%);
+        clip-path: inset(0 100% 0 0);
+    }
+
+    40% {
+        clip-path: inset(0 0 0 0);
+    }
+
+    80% {
+        clip-path: inset(0 0 0 100%);
     }
 
     100% {
-        transform: translateX(150%);
+        clip-path: inset(0 0 0 100%);
     }
 }
 
